--- a/src/main/resources/css/productCard.css
+++ b/src/main/resources/css/productCard.css
@@ -1,3 +1,13 @@
+.product-card-cm {
+  float: left;
+  background-color: #ffffff; /* Placeholder for $white */
+  -webkit-box-shadow: 0 2px 10px rgba(0, 0, 0, 0.06);
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.06);
+  -webkit-transition: 0.1s;
+  transition: 0.1s;
+  margin: 10px;
+}
+
 .product-card {
   float: left;
   width: 30%;
@@ -263,4 +273,26 @@
   height: 250px !important;
   width: min-content !important;
 
+}
+.hero-header {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+}
+
+.hero-content {
+  position: relative;
+  max-width: 1200px;
+  width: 100%;
+  padding: 20px;
+  box-sizing: border-box;
+}
+
+.right-aligned-image {
+  height: 70vh;
 }
